--- a/index.html
+++ b/index.html
@@ -109,11 +109,10 @@
             // set up text to print, each item in array is new line
             var aText = new Array(
                 "20.10.2023 Ngày Phụ Nữ Việt Nam",
-                "Chúc cho bà, mẹ, chị em phụ nữ ",
-                "Luôn xinh đẹp, mạnh khoẻ và hạnh phúc",
-                "Chúc cho những người con gái",
-                "Luôn được yêu thương, che chở ",
-                "Tìm được người mình yêu và cũng yêu thương mình <3"
+                "Chúc em luôn xinh đẹp, mạnh khỏe và hạnh phúc.",
+                "Chúc em luôn được yêu thương và che chở",
+                "Tìm được những niềm vui và hạnh phúc trong cuộc sống",
+                "Và luôn bên anh, người mà em yêu thương nhất <3"
             );
             var iSpeed = 100; // time delay of print out
             var iIndex = 0; // start printing array at this posision
