--- a/index.html
+++ b/index.html
@@ -107,14 +107,15 @@
     </div>
     
     <div id="typedtext" class="csstext">
-        <div id="clickMe">click vao man hinh</div>
+        <div id="clickMe">Click vào màn hình</div>
         <script>
             var aText = new Array(
-                "20.10.2024 Ngày Phụ Nữ Việt Nam",
-                "Chúc em luôn xinh đẹp, mạnh khỏe và hạnh phúc.",
-                "Chúc em luôn được yêu thương và che chở",
-                "Tìm được những niềm vui và hạnh phúc trong cuộc sống",
-                "Và luôn bên anh, người mà em yêu thương nhất <3"
+                "08.03.2025 Ngày Quốc Tế Phụ Nữ",
+                "Mong em luôn xinh đẹp, khỏe mạnh và tràn đầy hạnh phúc.",
+                "Nụ cười của em là điều quý giá nhất.",
+                "Chúc em luôn được yêu thương, che chở và tìm thấy bình yên trong cuộc sống.",
+                "Dẫu có khó khăn nào, anh luôn ở đây ủng hộ em.",
+                "Bấm vào bông hoa đi nào!"
             );
             var iSpeed = 100; // time delay of print out
             var iIndex = 0; // start printing array at this posision
